--- a/past-work.html
+++ b/past-work.html
@@ -60,16 +60,18 @@
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a>
                     </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a></li></ul>
                 <div class="icons-menu">
-                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
+                    <a class="iconfont-wrapper" href="mailto:dmitrii.ustiugov@inf.ethz.ch">
+                        <span class="p-2 mbr-iconfont socicon-mail socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
+                    <a class="iconfont-wrapper" href="https://twitter.com/DmitriiUstiugov" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-instagram socicon"></span>
+                    <a class="iconfont-wrapper" href="https://github.com/ustiugov" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-github socicon"></span>
                     </a>
-                    
+                    <a class="iconfont-wrapper" href="https://scholar.google.com/citations?user=cZ9jA9oAAAAJ&hl=en" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-googlescholar socicon"></span>
+                    </a>
                 </div>
                 
             </div>
@@ -270,7 +272,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/p" style="color:#aaa;">Get now</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">page</a> maker</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
