--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">Heterogeneous Computing &amp; AI-as-a-Service</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Accelerate AI-as-a-Service workloads by integrating heterogeneous hardware into cloud infrastructure.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Accelerate AI-as-a-Service (e.g., LLM, stable diffusion) workloads by integrating heterogeneous hardware into cloud infrastructure.</p>
                     </div>
                     
                 </div>
@@ -366,15 +366,14 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">Leonid Kondrashov (MIPT), 2023-ongoing.<br>Ruiqi Lai (SJTU, China), 2023-ongoing.<br>JooYoung Park (Korea University, South Korea), 2023-ongoing.<br><br><strong>Exchange PhD students</strong><br>Hancheng Wang (Nanjing University), 2023-2024.</p>
+                                <p class="mbr-text mbr-fonts-style display-7"><a href="http://leokondrashov.github.io/" class="text-primary">Leonid Kondrashov</a> (MIPT), 2023-ongoing.<br><a href="https://lrq619.github.io/" class="text-primary">Ruiqi Lai</a> (SJTU, China), 2023-ongoing.<br><a href="https://www.linkedin.com/in/jooyoung-park-1a4369214/" class="text-primary">JooYoung Park</a> (Korea University, South Korea), 2023-ongoing.<br><a href="https://sg.linkedin.com/in/yulin-zou-651636189" class="text-primary">Yulin Zou</a> (NTU Singapore), 2024-ongoing.<br><br><strong>Exchange PhD students</strong><br><a href="https://wanghanchengchn.github.io/" class="text-primary">Hancheng Wang</a> (Nanjing University), 2023-2024.</p>
                             </div>
                         </div>
                     </div>
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">
-                                    Yulin Zou (NTU), upcoming.</p>
+                                <p class="mbr-text mbr-fonts-style display-7">Vlad Pandelea (NTU; University of Pisa, Italy), 2024-ongoing.</p>
                             </div>
                         </div>
                     </div>
@@ -729,7 +728,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/h" style="color:#aaa;">designed with</a> Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="https://platform.twitter.com/widgets.js"></script>  <script src="assets/reloader/script.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">The</a> site was made with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="https://platform.twitter.com/widgets.js"></script>  <script src="assets/reloader/script.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
